# F1_project

./: Dockerfile  README.md  config.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 246a5cb1818a_add_sumarized.py  2481f13e42ad_baseline_schema.py  7f21b142345b_add_summarized.py  9e6076da2c4b_add_sumarized.py  b540bdef0f65_body_text.py  e0816d23b1aa_scrapping_schema.py
config/: config.py
dags/: f1_news_pipeline.py  f1_summarization.py
db/: postgres_utils.py
pipeline/: discovery_job.py  scraping_job.py  summarization_job.py
scrapers/: article_scraper.py  rss_discovery.py
utils/: classify_motorsports.py  llm_call.py
